--- a/_posts/0000-01-02-clduke2.md
+++ b/_posts/0000-01-02-clduke2.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to clduke2's slide!"
+title: "Welcome to our second slide!"
 ---
 This text isn't witty
 Use the left arrow to go back!
