Update line five

--- a/_posts/0000-01-02-clduke2.md
+++ b/_posts/0000-01-02-clduke2.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to clduke2's slide!"
 ---
-This text isn't witty
+This is my witty slide
 Use the left arrow to go back!
