Make line 5 more awesome

--- a/_posts/0000-01-02-clduke2.md
+++ b/_posts/0000-01-02-clduke2.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to clduke2's slide!"
 ---
-This is my witty slide
+This is my witty slide :tada:
 Use the left arrow to go back!
